# simple_raytracing

./: CMakeLists.txt  Makefile  README.md  raytracing.c
